# qubee-ipa-converter

./: CITATION.cff  LICENSE  README.md  lexicon.txt  pyproject.toml  words.txt
src/qubee_ipa/: __init__.py  cli.py  core.py  rules.py
src/qubee_ipa_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
